--- a/_posts/2025-02-01-podcast.md
+++ b/_posts/2025-02-01-podcast.md
@@ -1,7 +1,7 @@
    ---
     layout: post
     title: "Bonnington Quarry Expansion - The Objection Podcast
-    date: 2024-02--03
+    date: 2024-02-03
     ---
 
     ## Reasons to Object - A Podcast....
