--- a/_posts/2025-02-01-podcast.md
+++ b/_posts/2025-02-01-podcast.md
@@ -11,4 +11,4 @@
       Your browser does not support the audio element.
     </audio>
 
-    <p>A conversation that discusses the reasons to object to extending the Bonnington mains quarry/p>
+    <p>A conversation that discusses the reasons to object to extending the Bonnington mains quarry</p>
